test/expressions/casts/CastCArrayToCPtr-multiple.51.good
CastCArrayToCPtr-multiple.chpl:62: error: cast of c_array to c_ptr with a different element type
